# CCDown

./: .gitignore  AssemblyInfo.cs  CCDown.sln  CCDown.slnx  CNAME  Directory.Build.props  Global.props  README.md  api.py  constants.py  logger.py  main.py  pyproject.toml  requirements.txt  set_config.py  test.py  utils.py  xes_login.py
CCDown/: App.axaml  App.axaml.cs  AssemblyInfo.cs  CCDown.csproj  GlobalConstants.cs  Styles.axaml  Utils.cs
CCDown.Android/: Application.cs  CCDown.Android.csproj  MainActivity.cs
CCDown.Android/Properties/: AndroidManifest.xml
CCDown.Desktop/: CCDown.Desktop.csproj  Program.cs  app.manifest
CCDown/Behaviors/: PopupIntroAnimationBehavior.cs  StackPanelIntroAnimationBehavior.cs  ToggleTabStripBehavior.cs
CCDown/Controls/: AppToastAdorner.axaml  AppToastAdorner.axaml.cs  DevelopmentBuildAdorner.axaml  DevelopmentBuildAdorner.cs  Emptiable.axaml  Emptiable.axaml.cs  Empty.axaml  Empty.axaml.cs  Field.axaml  Field.axaml.cs  FluentIcon.axaml  FluentIcon.axaml.cs  FluentIconSource.cs  IconText.axaml  IconText.axaml.cs  StickyScrollViewer.axaml  StickyScrollViewer.axaml.cs
CCDown/Extensions/: DictionaryExtensions.cs  ViewInitializer.cs
CCDown/Icons/: FluentIconKind.cs  FluentIcons.cs
CCDown/MarkupExtensions/: FIExtension.cs
CCDown/Styles/: ChipListBox.axaml  NavigationBackButton.axaml  PopupAnimations.axaml  StackPanelIntroAnimation.axaml  TabStrip.axaml
CCDown/ViewModels/: HomeViewModel.cs  MainViewModel.cs  SettingsViewModel.cs  (+1 more)
app/: config.py  constants.py  mainwindow.py
docs/: get-cookie-with-devtools.md
(+46 files in other folders)
