[project]
name = "ccdown"
version = "0.1.0"
description = "下载学而思作品信息&内容"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aiofiles~=25.1.0",
    "aiohttp~=3.14.1",
    "aiozipstream>=0.4",
    "pyside6~=6.11.1",
    "qasync~=0.28.0",
    "sqlalchemy>=2.0.51",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
